--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    Our first doc
+    Our first docs
     Add some string from another account
+    New line here
 </body>
 
 </html>
