--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     Our first docs
     Add some string from another account
     New line here
+    <div class="text">Add new div</div>
 </body>
 
 </html>
